Meal search, details & default meal list added.

--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,6 @@
     font-weight: 600;
 }
 
-
-
-
-
 #form-search {
     width: 570px;
     height: 60px;
@@ -42,4 +38,28 @@
 
 .card-title {
     font-weight: 600;
+}
+#meal-details h3, h5 {
+    color: #252525;
+}
+#meal-details h3 {
+    font-size: 36px;
+    font-weight: 700;
+    margin: 22px 0;
+}
+#meal-details h5 {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 18px;
+}
+#meal-details-img {
+    width: 600px;
+    height: 300px;
+    border-radius: 10px;
+}
+#meal-details p {
+    color: #6C6C6C;
+}
+#meal-details {
+    display: none;
 }
